--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 
 plugins {
     id "com.palantir.docker" version "0.13.0"
+    id 'net.ltgt.apt' version '0.10'
 }
 
 group = 'springio'
@@ -40,6 +41,10 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly 'org.projectlombok:lombok:1.16.20'
+	apt "org.projectlombok:lombok:1.16.20"
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
